...
    //print(listi);

    while (exitAlertDialog == false) {
      String? enteredPassword = await showDialog(
        context: context,
        builder: (_) => AlertDialog(
          title: const Text('Admin Login'),
          content: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              if (_adminLoginBlocked == false &&
                  Globals.wrongPasswordAdminAttempts == 1)
                Text(
...
              if (_adminLoginBlocked == true)
                Text(
                  'Admin Login blocked for 5 minutes.',
                  style: TextStyle(color: Colors.red.shade600),
                ),
              TextField(
                key: const Key('adminPassword'),
                onChanged: (value) {
                  passwordAdmin = value;
                },
                decoration:
                    const InputDecoration(labelText: 'Enter Admin Password'),
                obscureText: true,
                enabled: !_adminLoginBlocked,
              ),
            ],
          ),
          actions: [
            ElevatedButton(
              key: const Key('authenticateAdmin'),
              onPressed: _adminLoginBlocked == true
                  ? null
                  : () {
                      Globals.wrongPasswordAdminAttempts++;
                      Navigator.of(context).pop(passwordAdmin);
                    },
...
                      ElevatedButton(
                        onPressed: _openParkingSpotsScreen,
                        style: ButtonStyle(
                          backgroundColor: MaterialStateProperty.all<Color>(Colors.blue),
                          foregroundColor: MaterialStateProperty.all<Color>(Colors.white),
                        ),
                        key: const Key('crudOpParking'),
                        child: const Text('Parking Spots'),
                      ),
                      const SizedBox(
                        width: 5,
                      ),
                      ElevatedButton(
...
                DropdownButton<Manager>(
                  value: _selectedManager,
                  onChanged: _filterByManager,
                  items: [
                    const DropdownMenuItem<Manager>(
                      value: null,
                      key: Key('filterByManagersHomeTab'),
                      child: Text('All Managers'),
                    ),
                    for (var manager in _managers)
                      DropdownMenuItem<Manager>(
                        value: manager,
                        child: Text(manager.name),
...
