...
          return AlertDialog(
            title: const Text('Success'),
            content: Text('Your reservation was confirmed ${reservationManager.employeeName}'),
            actions: <Widget>[
              TextButton(
                key: const Key('confirmedButton'),
                child: const Text('OK'),
                onPressed: () {
                  Navigator.of(context).pop();
                },
              ),
            ],
          );
...
